Fixed jumpy expandable animation

--- a/src/ui/components/npcs/npcs.component.scss
+++ b/src/ui/components/npcs/npcs.component.scss
@@ -4,7 +4,7 @@
 }
 
 .npc-wrapper {
-  margin-top: 1.5em;
+  padding-top: 1.5em;
 }
 
 .middle-arrow {
